--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: hashicorp/packer:1.6.5
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
-        AWS_SECRET_KEY_ID: ${{ secrets.aws_secret_key }}
     steps:
+      - run: |
+        set -e
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        sudo apt-get update && sudo apt-get install packer
+        curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o session-manager-plugin.deb
+        sudo dpkg -i session-manager-plugin.deb
       - uses: actions/checkout@v2
       - name: Build image
         run: packer build wireguard-ami.pkr.hcl
