--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build image
         run: packer build wireguard-ami.pkr.hcl
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_KEY_ID: ${{ secrets.AWS_SECRET_KEY_ID }}
